<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Google Image Searcher</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_prompt">Enter search query</string>
    <string name="search">Search</string>
    <string name="image_title">Image Title</string>
    <string name="image_result">Image Result</string>
    <string name="title_activity_image_display">Full Image</string>
    <string name="image_size">Image Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="color_filter">Color Filter</string>
    <string name="image_type">Image Type</string>
    <string name="site_filter">Site Filter</string>
    <string name="abc">abc.com</string>

</resources>
